--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
     "node-restful": "^0.2.6",
     "pm2": "^4.2.3"
   },
   "devDependencies": {
+    "braces": "^3.0.2",
     "nodemon": "1.11.0"
   }
 }
