--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "font-awesome": "^4.7.0",
-    "react-router": "^5.1.2"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
